--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,36 +1,50 @@
 <section id="footer">
 	<div class="container">
-		<hr/>
-		<a href="#">Terms</a>
-		<!-- <div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
-				<ul class="list-group">
-					<li class="list-group-item">One</li>
-					<li class="list-group-item">Two</li>
-					<li class="list-group-item">Three</li>
-				</ul>
-			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
-				<ul class="list-group">
-					<li class="list-group-item">One</li>
-					<li class="list-group-item">Two</li>
-					<li class="list-group-item">Three</li>
-				</ul>
-			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
-				<ul class="list-group">
-					<li class="list-group-item">One</li>
-					<li class="list-group-item">Two</li>
-					<li class="list-group-item">Three</li>
-				</ul>
-			</div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
-				<ul class="list-group">
-					<li class="list-group-item">One</li>
-					<li class="list-group-item">Two</li>
-					<li class="list-group-item">Three</li>
-				</ul>
-			</div>
-		</div> -->
+		<!-- <p class="text-center">
+			<%= link_to "#", class: 'btn btn-minimal' do %>
+				Sign up
+			<% end %>
+			&nbsp;
+			&nbsp;
+			<%= link_to "#", class: 'btn btn-minimal' do %>
+				Log in
+			<% end %>
+		</p> -->
+
+		<p class="text-center">
+			<br/>
+			
+			<%= link_to 'Sign up', "#" %>
+			&nbsp;
+			&nbsp;
+			&#183;
+			&nbsp;
+			&nbsp;
+			<%= link_to 'Log in', "#" %>
+			&nbsp;
+			&nbsp;
+			&#183;
+			&nbsp;
+			&nbsp;
+			<%= link_to 'Pricing', pricing_path %>
+			&nbsp;
+			&nbsp;
+			&#183;
+			&nbsp;
+			&nbsp;
+			<%= link_to 'About', about_path %>
+			&nbsp;
+			&nbsp;
+			&#183;
+			&nbsp;
+			&nbsp;
+			<%= link_to 'Terms', terms_path %>
+			
+
+		</p>
+
+		<p class="text-center" style="font-size:12px;color:#999;">Questions or feedback? &nbsp;<a href="mailto:chris@epicsteme.com">Email</a>&nbsp; or tweet &nbsp;<a href="http://twitter.com/chrismikelson">@chrismikelson</a>.</p>
+
+		<p class="text-center">&copy; 2014 Epicsteme, Inc.</p>
 	</div>
 </section>
