--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,9 +1,114 @@
+
 section#landing {
+background-color: #3B2F63;
+	height: 850px;
+background-image: -webkit-radial-gradient(50% top, rgba(84,90,182,0.6) 0%,rgba(84,90,182,0) 75%),-webkit-radial-gradient(right top, #794aa2 0%,rgba(121,74,162,0) 57%);
+background-image: radial-gradient( at 50% top, rgba(84,90,182,0.6) 0%,rgba(84,90,182,0) 75%),radial-gradient( at right top, #794aa2 0%,rgba(121,74,162,0) 57%);
+position:relative;
+
+  .btn {
+    border-radius:4px;color: #3B2F63;
+    border-radius:4px;
+    color: #3B2F63;
+    padding: 15px 25px;
+    font-weight: 700;}
+
+  .headline {
+    margin-top:180px;
+    text-align:center;}
+  
+  .headline h2 {
+    color:#f9f9f9;
+    text-shadow:0px 1px 2px #222;}
+  
+  .headline p {
+    color:#ccc;
+    font-size:16px;}
+
+  .clients {
+    background:rgba(0,0,0,0.15);
+    height:60px;
+    position: absolute;
+    bottom:0;
+    width:100%;
+    margin:auto 0;
+
+    .used-by {
+      color:#ddd;
+      text-transform: uppercase;
+      margin-top: 22px;
+      font-size: 12px;}
+
+    img.client-img {
+      margin: 12px;
+      height: 35px;}
+
+  }
+
 
 }
+a:hover, a:focus {
+	text-decoration:none;
+}
+
 
 body {
-    margin-top: 50px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    margin-top: 0px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    background:none;
+    min-height: 100%;
+    font-family: "Lato", Helvetica;
+}
+.navbar-brand {color:#ddd;}
+.navbar-right a {color:#999;
+	&:hover, &:focus {
+		background:none;
+	}
+}
+.nav > li > a:hover, .nav > li > a:focus {
+	background:none;
+	color:#ddd;
+}
+
+.preview {
+-moz-border-radius: 32px;
+-webkit-border-radius: 32px;
+border-radius: 32px;
+padding: 32px;
+background: #0f0f1f;
+
+-webkit-box-sizing: border-box;
+-moz-box-sizing: border-box;
+box-sizing: border-box;
+-webkit-transition: all 0.3s ease-in-out;
+-moz-transition: all 0.3s ease-in-out;
+-o-transition: all 0.3s ease-in-out;
+transition: all 0.3s ease-in-out;
+}
+.text-xl {text-shadow: 0px 1px 50px #B6A6ED;}
+.preview img {width:100%;}
+
+
+
+.btn.btn-minimal {border:1px solid #3B2F63;}
+.btn.btn-minimal:hover {background:#3B2F63;color:#fff;}
+.img-upload-box {color:#ddd;padding:15px;background-color:rgba(255,255,255,0.05);margin-top:150px;margin-bottom:150px;}
+
+.box-shadow {box-shadow:0px 2px 5px 0px #222;}
+.border-radius {border-radius:4px;}
+.border-lt-grey {border: 1px solid #f9f9f9;}
+.border-grey-dash {border: 8px dashed #3B2F63;}
+.feature {
+  text-align:center;
+
+  i {
+    color:#3B2F63;
+  }
+}
+
+.faq {
+  padding:0 15px;
+
+  h4 {color:#3B2F63;}
 }
 
 /* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
@@ -17,8 +122,37 @@ body {
 }
 
 
+
+nav {margin-top:20px;}
+
+
+
+section#about {
+  margin-bottom: 80px;
+}
+
+
 section#footer {
-	margin-top:80px;
+	background: #292c2e;
+	min-height:100px;
+  border-top: 1px solid #333;
+	
+	p {
+    margin:30px 0;
+		color:#666;
+		font-size:11px;
+	}
+
+  a {
+    color:#eee;
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+
+  .btn.btn-minimal {border:1px solid #eee;padding:5px 20px;margin:10px 10px 0;border-radius:2px;}
+  .btn.btn-minimal:hover {background:#fff;color:#3B2F63;opacity:1;}
 	
 	li.list-group-item {
 		border: none;
@@ -29,3 +163,137 @@ section#footer {
 
 
 }
+
+section#enterprise {
+  background-color: #3B2F63;
+  margin-top:80px;
+  
+
+  .row {
+    padding:50px 0;
+
+    h2 {
+      color:#fff;
+      margin:5px 0 30px;
+    }
+
+    h4 {
+      color:#ddd;
+      margin-bottom:5px;
+    }
+  }
+
+}
+
+
+
+.pricing-tables {
+  padding: 20px; }
+  .pricing-tables h1 {
+    font-size: 48px; }
+  .pricing-tables .plan.first {
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px; }
+  .pricing-tables .plan.last {
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px; }
+  .pricing-tables .plan.recommended {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px; }
+    .pricing-tables .plan.recommended .head {
+      margin-bottom: 20px;
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px; }
+  .pricing-tables.attached .col-sm-4,
+  .pricing-tables.attached .col-md-4,
+  .pricing-tables.attached .col-sm-3,
+  .pricing-tables.attached .col-md-3 {
+    padding-left: 0;
+    padding-right: 0; }
+  .pricing-tables.attached .plan {
+    border-radius: 0; }
+    .pricing-tables.attached .plan .head {
+      border-radius: 0; }
+    .pricing-tables.attached .plan.recommended {
+      border-radius: 4px; }
+      .pricing-tables.attached .plan.recommended .head {
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px; }
+    .pricing-tables.attached .plan.last {
+      border-bottom-right-radius: 4px; }
+      .pricing-tables.attached .plan.last .head {
+        border-top-right-radius: 4px; }
+    .pricing-tables.attached .plan.first {
+      border-bottom-left-radius: 4px; }
+      .pricing-tables.attached .plan.first .head {
+        border-top-left-radius: 4px; }
+
+.plan {
+  box-shadow: 0 1px 2px #c8c8c8;
+  min-height: 100px;
+  background: #fff;
+  border-radius: 4px;
+  margin: 20px 0;
+  padding-bottom: 25px;
+  text-align: center; }
+  .plan .head {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    padding: 12px 16px;
+    background: #292c2e;
+    color: #fff; }
+    .plan .head h1, .plan .head h2, .plan .head h3 {
+      padding: 0;
+      margin: 0;
+      font-weight: 100; }
+  .plan .price {
+    border-top: 1px solid #eee;
+    margin: 0 auto 30px auto;
+    width: 80%; }
+    .plan .price h3 {
+      font-size: 82px;
+      vertical-align: top;
+      line-height: 1; }
+      .plan .price h3 span {
+        font-size: 38px;
+        vertical-align: top;
+        position: relative;
+        margin: 6px 0 0 -7px;
+        display: inline-block; }
+    .plan .price h4 {
+      color: #aaa;
+      font-size: 14px; }
+  .plan .btn {
+    padding: 10px 30px;
+    text-transform: uppercase;
+    font-weight: 500; }
+  .plan ul {
+    list-style-type: none;
+    padding: 20px;
+    margin-top: 2px; }
+    .plan ul li {
+      line-height: 22px;
+      margin-bottom: 15px;
+      font-size: 14px;
+      font-weight: 400; }
+      .plan ul li a {
+        text-decoration: underline;
+        color: #e6e9ed; }
+      .plan ul li:last-child {
+        border-bottom: none; }
+    .plan ul strong {
+      font-weight: 700; }
+  .plan.recommended {
+    margin-top: 6px;
+    box-shadow: 0 0 22px rgba(10, 10, 10, 0.42);
+    position: relative;
+    z-index: 99;
+    border-radius: 4px; }
+    .plan.recommended .head {
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+      background: #292c2e; }
+    .plan.recommended .btn {
+      margin-bottom: 10px; }
+
+.plan:hover .head {background-color:#3B2F63;}
