--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,4 @@
-<br/>
-<nav class="navbar navbar-fixed-top" role="navigation">
+<nav class="navbar " role="navigation">
   <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -9,22 +8,24 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Product MASH</a>
+          <%= link_to 'productMASH', root_url, class: 'navbar-brand' %>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <!-- <ul class="nav navbar-nav">
-              <li>
+           <ul class="nav navbar-nav">
+              <!--<li>
                   <a href="#">About</a>
-              </li>
-              <li>
-                  <a href="#">Services</a>
-              </li>
-              <li>
-                  <a href="#">Contact</a>
-              </li>
-          </ul> -->
+              </li>-->
+              
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Already a member?</a></li>
+            
+          </ul> 
       </div>
+
+
       <!-- /.navbar-collapse -->
   </div>
   <!-- /.container -->
