Added devise for users

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,14 +13,19 @@
 
 		<p class="text-center">
 			<br/>
-			
-			<%= link_to 'Sign up', "#" %>
+			<%= link_to 'Sign up', new_user_registration_path %>
 			&nbsp;
 			&nbsp;
 			&#183;
 			&nbsp;
 			&nbsp;
-			<%= link_to 'Log in', "#" %>
+			<%= link_to 'Log in', new_user_session_path %>
+			&nbsp;
+			&nbsp;
+			&#183;
+			&nbsp;
+			&nbsp;
+			<%= link_to 'Home', "#" %>
 			&nbsp;
 			&nbsp;
 			&#183;
