--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-
+<%= render partial: "shared/flash_messages", flash: flash %> 
 <%= yield %>
 <%= render "shared/footer" %>
 </body>
