--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,3 +1,15 @@
+body {position: relative;}
+.alert-block {color: #a94442;
+background-color: #f2dede;
+border-color: #ebccd1;}
+div.alert {
+position: absolute;
+z-index: 100;
+left: 33%;
+width: 33%;
+top: 20px;
+}
+
 
 section#landing {
 background-color: #3B2F63;
