--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -20,8 +20,11 @@
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Already a member?</a></li>
-            
+            <% if user_signed_in? %>
+              <li><%= link_to('Log out', destroy_user_session_path, :method => :delete) %> </li>
+            <% else %>
+              <li><%= link_to 'Already a member?', new_user_session_path %></li>
+            <% end %>
           </ul> 
       </div>
 
