--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -25,7 +25,7 @@
 			&#183;
 			&nbsp;
 			&nbsp;
-			<%= link_to 'Home', "#" %>
+			<%= link_to 'Home', root_url %>
 			&nbsp;
 			&nbsp;
 			&#183;
