--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,6 +9,7 @@
               <span class="icon-bar"></span>
           </button>
           <%= link_to 'productMASH', root_url, class: 'navbar-brand' %>
+          <div class="navbar-brand fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" style="padding-top:15px;"></div>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -21,8 +22,10 @@
 
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
+              <li><a href="#"><%= current_user.full_name %></a></li>
               <li><%= link_to('Log out', destroy_user_session_path, :method => :delete) %> </li>
             <% else %>
+              <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
               <li><%= link_to 'Already a member?', new_user_session_path %></li>
             <% end %>
           </ul> 
