--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -10,6 +10,7 @@ width: 33%;
 top: 20px;
 }
 
+.btn.btn-facebook {color:#fff;background:-webkit-linear-gradient(#4c69ba, #3b55a0)}
 
 section#landing {
 background-color: #3B2F63;
@@ -24,6 +25,7 @@ position:relative;
     color: #3B2F63;
     padding: 15px 25px;
     font-weight: 700;}
+
 
   .headline {
     margin-top:180px;
