--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,5 +14,9 @@
 
   <div><%= f.submit "Sign up" %></div>
 <% end %>
+<%= link_to user_omniauth_authorize_path(:facebook), class: 'btn btn-sm btn-facebook' do %>
+	<i class="fa fa-facebook"></i>&nbsp;&nbsp;&nbsp;&nbsp;
+	Sign up with Facebook
+<% end %>
 
 <%= render "devise/shared/links" %>
