--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -25,8 +25,9 @@
               <li><a href="#"><%= current_user.full_name %></a></li>
               <li><%= link_to('Log out', destroy_user_session_path, :method => :delete) %> </li>
             <% else %>
-              <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
-              <li><%= link_to 'Already a member?', new_user_session_path %></li>
+              <li><%= link_to 'Pricing', pricing_path %></li>
+              <li><%= link_to 'About', about_path %></li>
+              <li><%= link_to 'Sign in', new_user_session_path %></li>
             <% end %>
           </ul> 
       </div>
