--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -9,6 +9,21 @@ left: 33%;
 width: 33%;
 top: 20px;
 }
+a { 
+  color:#794aa2;
+}
+a:hover {color:#3B2F63;}
+
+.btn-primary:hover {
+  background-color:#3B2F63;
+  border-color:#794aa2;
+}
+.btn-primary {
+  border-color:#3B2F63;
+  background-color:#794aa2;
+}
+
+.text-primary {color:#3B2F63;}
 
 .btn.btn-facebook {color:#fff;background:-webkit-linear-gradient(#4c69ba, #3b55a0)}
 
