--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing project</h1>
 
+<%= link_to projects_path do %>
+	<i class="fa fa-arrow-left"></i>&nbsp;
+	Back
+<% end %> | <%= link_to 'Show', @project %> 
+<h1>Edit Project</h1>
 <%= render 'form' %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
