--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,7 @@
+
+<%= link_to projects_path do %>
+	<i class="fa fa-arrow-left"></i>&nbsp;
+	Back
+<% end %>
 <h1>New project</h1>
-
 <%= render 'form' %>
-
-<%= link_to 'Back', projects_path %>
