--- a/app/views/shared/_dashnav.html.erb
+++ b/app/views/shared/_dashnav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar " role="navigation">
+<nav class="navbar navbar-dash" role="navigation">
   <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -22,9 +22,11 @@
 
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
+              <li><%= link_to 'Upgrade to Pro', pricing_path, class: 'text-primary' %></li>
               <li><%= link_to 'Projects', projects_path %></li>
               <li><a href="#"><%= current_user.full_name %></a></li>
-              <li><%= link_to('Log out', destroy_user_session_path, :method => :delete) %> </li>
+              <li><%= link_to('Help', "#", :method => :delete, class: 'lt-nav') %> </li>
+              <li><%= link_to('Log out', destroy_user_session_path, :method => :delete, class: 'lt-nav') %> </li>
             <% else %>
               <li><%= link_to 'Pricing', pricing_path %></li>
               <li><%= link_to 'About', about_path %></li>
