--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -22,6 +22,7 @@ a:hover {color:#3B2F63;}
   border-color:#3B2F63;
   background-color:#794aa2;
 }
+.dropdown-menu {box-shadow: 0 1px 2px rgba(0, 0, 0, 0.175);}
 
 .text-primary {color:#3B2F63;}
 
