--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -1,4 +1,5 @@
 #projects {
+	margin: 0 auto 100px;
 	.fa {padding:0 15px;color:#999;}
 	.fa:hover {color:#666;}
 	.fa-trash:hover {color:#c9302c;}
@@ -11,5 +12,50 @@
 	li a:hover {color:#666;}
 	li a.lt-nav {color:#999;}
 	li a.lt-nav:hover {color:#794aa2;}
+	.nav .open > a {background:#fff;}
 }
 
+.box {
+  margin: 5px;
+  width: 214px;
+  border-radius:4px;
+  box-shadow:0px 1px 2px 0px #c8c8c8;
+  overflow: hidden;
+
+  &:hover {
+  	
+  }
+
+  h4 {
+		margin-bottom:20px;
+	}
+
+	.description {
+		position: absolute;
+		top: 10px;
+		height: 78%;
+		background: rgba(255, 255, 255, 0.95);
+		width:100%;
+
+		p {
+			padding:10px;
+		}
+	}
+
+  .project-actions {
+  	display: block;
+	background: #f9f9f9;
+	border-top: 1px solid #f0f0f0;
+	padding: 5px;
+  }
+}
+
+.box img {
+  width: 100%;
+  border-bottom:1px solid #ddd;
+  margin-bottom:10px;
+
+  &:hover { 
+  		opacity: 0.7;
+  	}
+}
