--- a/app/views/shared/_dashnav.html.erb
+++ b/app/views/shared/_dashnav.html.erb
@@ -9,7 +9,7 @@
               <span class="icon-bar"></span>
           </button>
           <%= link_to 'productMASH', root_url, class: 'navbar-brand' %>
-          <div class="navbar-brand fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" style="padding-top:15px;"></div>
+          
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -24,9 +24,25 @@
             <% if user_signed_in? %>
               <li><%= link_to 'Upgrade to Pro', pricing_path, class: 'text-primary' %></li>
               <li><%= link_to 'Projects', projects_path %></li>
-              <li><a href="#"><%= current_user.full_name %></a></li>
+              <li class="dropdown">
+                <%= link_to "#", :class => 'dropdown-toggle', :id => 'account-dropdown', :data => { :toggle => "dropdown" } do %>
+                  <%= current_user.full_name %>
+                  <span class="caret"></span>
+                <% end %>
+                 <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+                  <li role="presentation" class="divider"></li>
+                  <li role="presentation"><%= link_to(destroy_user_session_path, :method => :delete, role: 'menuitem', tabindex: '-1') do %>
+                    <i class="fa fa-sign-out"></i>&nbsp;&nbsp;
+                    Log out
+                    <% end %>
+                  </li>
+                </ul>
+              </li>
               <li><%= link_to('Help', "#", :method => :delete, class: 'lt-nav') %> </li>
-              <li><%= link_to('Log out', destroy_user_session_path, :method => :delete, class: 'lt-nav') %> </li>
+              <li> </li>
             <% else %>
               <li><%= link_to 'Pricing', pricing_path %></li>
               <li><%= link_to 'About', about_path %></li>
