--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,8 +1,14 @@
-
-<%= link_to projects_path do %>
+<br/>
+<div class="row">
+  <div class="col-md-12">
+    <%= link_to projects_path do %>
 	<i class="fa fa-arrow-left"></i>&nbsp;
 	Back
-<% end %> | <%= link_to 'Show', @project %> 
-<h1>Edit Project</h1>
+<% end %>
+| <%= link_to 'Show', @project %> 
+<h3>Edit Project</h3>
+  </div>
+</div>
+<hr/>
 <%= render 'form' %>
 
