--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -5,6 +5,8 @@
 	.fa-trash:hover {color:#c9302c;}
 	.default-actions{width:180px;}
 	.text-primary i.fa.fa-plus {color:#3B2F63;}
+	.btn-modal i {padding:0px 10px 0px 5px; color:#fff;}
+	.modal-header i.fa.fa-times {padding:0;} 
 }
 
 .navbar-dash {
@@ -16,12 +18,25 @@
 	.nav .open > a {background:#fff;}
 }
 
+.modal {}
+.modal-backdrop {background:rgba(255, 255, 255, 1);opacity:0.9;}
+@media (min-width: 768px) {
+
+	.modal-dialog {
+		width: 600px;
+		margin: 100px auto;
+	}
+}
+
+
 .box {
   margin: 5px;
   width: 214px;
   border-radius:4px;
   box-shadow:0px 1px 2px 0px #c8c8c8;
   overflow: hidden;
+
+  h4.modal-title {margin-bottom:0;}
 
   &:hover {
   	img {
