--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,7 +1,12 @@
-
-<%= link_to projects_path do %>
+<br/>
+<div class="row">
+  <div class="col-md-12">
+    <%= link_to projects_path do %>
 	<i class="fa fa-arrow-left"></i>&nbsp;
 	Back
 <% end %>
-<h1>New project</h1>
+<h3>New Project</h3>
+  </div>
+</div>
+<hr/>
 <%= render 'form' %>
