--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,17 +1,13 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to projects_path do %>
-	<i class="fa fa-arrow-left"></i>&nbsp;&nbsp;
-	Back
-<% end %> |
-<%= link_to 'Edit', edit_project_path(@project) %>
+<br/>
 <div class="row">
-	
-	<div class="col-md-8 col-sm-8">
-		<%= image_tag @project.image, class: 'img-responsive' %>
-	</div>
-	<div class="col-md-4 col-sm-4">
-		<h4><%= @project.name %></h4>
-		<p><%= @project.description %></p>
-	</div>
+  <div class="col-md-12">
+    <%= link_to projects_path do %>
+	<i class="fa fa-arrow-left"></i>&nbsp;
+	Back
+<% end %>
+ |
+<%= link_to 'Edit', edit_project_path(@project) %>
+<h3><%= @project.name %></h3>
+  </div>
 </div>
+<hr/>
