--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -25,12 +25,16 @@
     <div class="box">
       <%= link_to project_path(project) do %>
       <%= image_tag project.image %>
+      <div class="view-project">
+        <button class="btn btn-view-project">View Project</button>
+      </div>
       <% end %>
       <div class="delete-project" data-toggle="modal" data-target="#delete-project-<%= project.id.to_s %>">
         <% if project.user == current_user %>
           <i class="fa fa-times"></i>
         <% end %>
       </div>
+
       <div class="modal fade" id="delete-project-<%= project.id.to_s %>">
         <div class="modal-dialog">
           <div class="modal-content">
