--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -121,9 +121,7 @@ transition: all 0.3s ease-in-out;
 .text-xl {text-shadow: 0px 1px 50px #B6A6ED;}
 .preview img {width:100%;}
 
-
-
-.btn.btn-minimal {border:1px solid #3B2F63;}
+.btn.btn-minimal {border:1px solid #3B2F63;background:rgba(255,255,255,0.50);}
 .btn.btn-minimal:hover {background:#3B2F63;color:#fff;}
 .img-upload-box {color:#ddd;padding:15px;background-color:rgba(255,255,255,0.05);margin-top:150px;margin-bottom:150px;}
 
