--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -14,6 +14,8 @@ a {
 }
 a:hover {color:#3B2F63;}
 
+
+i.fa.fa-edit.fa-xs {font-size:12px;color:#ccc;}
 .btn-primary:hover {
   background-color:#3B2F63;
   border-color:#794aa2;
