--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,12 +1,9 @@
-<br/>
 <div class="row">
   <div class="col-md-12">
-    <%= link_to projects_path do %>
+  
+<h3><%= link_to project_path do %>
 	<i class="fa fa-arrow-left"></i>&nbsp;
-	Back
-<% end %>
-| <%= link_to 'Show', @project %> 
-<h3>Edit Project</h3>
+<% end %>Edit Project</h3>
   </div>
 </div>
 <hr/>
