--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,3 @@
-<br/>
 <div class="row">
   <div class="col-md-12">
     <h3>My Projects</h3>
@@ -57,7 +56,7 @@
       </div><!-- /.modal -->
       <h4 class="text-center"><%= project.name %></h4>
 
-      <div class="project-actions text-center">
+      <!-- <div class="project-actions text-center">
       <%= link_to project_path(project) do %>
         <i class="fa fa-eye"></i>
       <% end %>
@@ -73,7 +72,7 @@
           $('#project-<%= project.id.to_s %>').tooltip();
           
         </script>
-    </div>
+    </div> -->
     </div>
   <% end %>
 </div>
