--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -13,7 +13,7 @@
   <div class="row">
   <div class="col-md-6 col-sm-6">
     <%= f.hidden_field :user_id, :value => current_user.id %>
-    <%= f.hidden_field :project_id, :value => @project.id %>
+    <label><%= @idea.project_id %></label>
 
     <label>Idea Name</label>
     <%= f.text_field :name, class: 'form-control', placeholder: 'Idea Name' %>
@@ -29,6 +29,7 @@
 </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
+<br/>
