--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
   
-<h3><%= link_to project_path do %>
+<h3><%= link_to @project do %>
 	<i class="fa fa-arrow-left"></i>&nbsp;
 <% end %>Edit Project</h3>
   </div>
