--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -21,13 +21,14 @@
     <% end %>
   </div>
 </div>
-<hr/>
+<hr/ style='margin-bottom:0px;'>
 
 <div class="row">
 	<div class="col-md-8 col-sm-8">
 		<%= image_tag @idea.image, class: 'img-responsive' %>
 	</div>
 	<div class="col-md-4 col-sm-4">
+		<br/>
 		<%= @idea.inspect %>
 	</div>	
 </div>
