added mash section to ideas

--- a/app/assets/stylesheets/extra-styles.css.erb
+++ b/app/assets/stylesheets/extra-styles.css.erb
@@ -2,6 +2,10 @@ section#testimonials {
 	background: #3B2F63;
 	background: url(<%= asset_path 'testimonial-bg.png' %>); 
 }
+section#mash {
+	background: #794aa2;
+	background: url(<%= asset_path 'testimonial-bg.png' %>); 
+}
 section#enterprise {
 	background: url(<%= asset_path 'stars.png' %>); 
 }
