flipped around container to allow use of sections in view templates

--- a/app/views/ideas/edit.html.erb
+++ b/app/views/ideas/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
   <div class="col-md-12">
 <h3><%= link_to root_url + 'projects/' + @idea.project_id.to_s + '/ideas/' + @idea.id.to_s do %>
@@ -8,3 +9,4 @@
 <hr/>
 
 <%= render 'form' %>
+</div>
