--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,5 @@
-<br/>
+
+<div class="container">
 <div class="row">
   <div class="col-md-12">
     <%= link_to projects_path do %>
@@ -10,3 +11,4 @@
 </div>
 <hr/>
 <%= render 'form' %>
+</div>
