--- a/app/views/ideas/new.html.erb
+++ b/app/views/ideas/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
   <div class="col-md-12">
 <h3><%= link_to @project do %>
@@ -7,3 +8,4 @@
 </div>
 <hr/>
 <%= render 'form' %>
+</div>
