--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
   <div class="col-md-12">
   
@@ -8,4 +9,5 @@
 </div>
 <hr/>
 <%= render 'form' %>
+</div>
 
