--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
   <div class="col-md-12">
     <h3>My Projects</h3>
@@ -77,3 +78,4 @@
   <% end %>
 </div>
 <br/>
+</div>
