--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -14,6 +14,17 @@ a {
 }
 a:hover {color:#3B2F63;}
 
+
+span.beta {
+  float: left;
+  padding: 3px 7px;
+  background: rgba(0,0,0,0.3);
+  color: #fff;
+  font-size: 10px;
+  border-radius: 3px;
+  margin-top: 15px;
+  letter-spacing: 0.8px;
+}
 .btn-primary:hover {
   background-color:#3B2F63;
   border-color:#794aa2;
