--- a/app/views/shared/_dashnav.html.erb
+++ b/app/views/shared/_dashnav.html.erb
@@ -8,7 +8,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <%= link_to 'productMASH', root_url, class: 'navbar-brand' %>
+          <%= link_to 'productMASH', root_url, class: 'navbar-brand' %> <span class=" beta">BETA v0.1.3</span>
           
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
