fix margin on 'add new project'

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -37,6 +37,7 @@
   overflow: hidden;
 
   h4.modal-title {margin-bottom:0;}
+  h1 {margin-bottom:20px;}
 
   .view-project {
 	  position: absolute;
