--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -17,17 +17,46 @@ a:hover {color:#3B2F63;}
 .form-group {
 padding: 0 15px;
 }
+.messages {
+height: 350px;
+display: block;
+width: 100%;
+overflow: scroll;}
+.media {margin-top:0px;border-bottom:1px solid #ddd;padding:15px 10px;}
+.media:hover {
+background: #f9f9f9;
+}
+h4.media-heading {padding-top:2px;}
+.media-body {font-size:12px;}
+.btn-default .badge {background: #794aa2;color:#fff;}
+.badge {padding: 3px 7px 4px 8px;}
+.dropdown-menu > li > a {margin:10px 0px;}
+li a#account-dropdown {border:1px solid #fff; }
+li.open a#account-dropdown {
+  border: 1px solid #ddd;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom: 1px solid #fff;
+  z-index: 100000;
+  margin: 0px;}
+
+.navbar-nav > li > .dropdown-menu {border-top-left-radius:8px;
+border-bottom-left-radius: 8px;
+border-bottom-right-radius: 8px;
+border-color: #ddd;
+box-shadow: none;
+top:98%;}
 
 i.fa.fa-edit.fa-xs {font-size:12px;color:#ccc;}
 
 span.beta {
   float: left;
-  padding: 3px 7px;
+  padding: 2px 4px;
   background: rgba(0,0,0,0.3);
   color: #fff;
   font-size: 10px;
   border-radius: 3px;
-  margin-top: 15px;
+  margin-top: 17px;
   letter-spacing: 0.8px;
 }
 .btn-primary:hover {
