Back button on edit registrations

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,12 +3,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <br/>
-      <%= link_to projects_path do %>
-        <i class="fa fa-arrow-left"></i>&nbsp;
-        Back
-      <% end %>
-        <h3>Edit Account Settings</h3>
+      
+        <h3>
+          <%= link_to projects_path do %>
+            <i class="fa fa-arrow-left"></i>&nbsp;
+          <% end %>
+          Edit Account Settings
+        </h3>
       <hr/>
       <div class="row">
         <div class="col-md-6 col-sm-6">
