--- a/app/assets/stylesheets/ideas.css.scss
+++ b/app/assets/stylesheets/ideas.css.scss
@@ -7,7 +7,15 @@
 	.btn-modal i {padding:0px 10px 0px 5px; color:#fff;}
 	.modal-header i.fa.fa-times {padding:0;} 
 
-	
+}
+img#idea {
+position: relative;}
+#idea-canvas {
+position: absolute;
+left:0;
+top:0;
+width:100%;
+height:100%;
 }
 
 .navbar-dash {
@@ -21,6 +29,7 @@
 
 .modal {}
 .modal-backdrop {background:rgba(255, 255, 255, 1);opacity:0.9;}
+
 @media (min-width: 768px) {
 
 	.modal-dialog {
@@ -41,7 +50,7 @@
   h4.modal-title {margin-bottom:0;}
 
   .view-idea {
-	  position: absolute;
+  		position: absolute;
 		left: 63px;
 		top: 33%;
 		display:none;
