--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -2,11 +2,10 @@
 <div class="container">
 <div class="row">
   <div class="col-md-12">
-    <%= link_to projects_path do %>
+    
+<h3><%= link_to projects_path do %>
 		<i class="fa fa-arrow-left"></i>&nbsp;
-		Back
-	<% end %>
-<h3>New Project</h3>
+	<% end %> New Project</h3>
   </div>
 </div>
 <hr/>
