--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -31,45 +31,53 @@
     <hr/>
   </div>
 </div>
-
-<div id="ideas" class="transitions-enabled">
-<% @project.ideas.each do |idea| %>
-    <div class="box">
-      <%= link_to [@project, idea] do %>
-        <%= image_tag idea.image %>
-        <div class="view-idea">
-          <button class="btn btn-view-idea">View idea</button>
-        </div>
-      <% end %>
-      <div class="delete-idea" data-toggle="modal" data-target="#delete-idea-<%= idea.id.to_s %>">
-        <% if idea.user == current_user %>
-          <i class="fa fa-times"></i>
-        <% end %>
-      </div>
-
-      <div class="modal fade" id="delete-idea-<%= idea.id.to_s %>">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true"><i class="fa fa-times"></i></span><span class="sr-only">Close</span></button>
-              <h4 class="modal-title">Are you sure you want to delete this Idea?</h4>
+<% if @project.ideas.present? %>
+  <div id="ideas" class="transitions-enabled">
+    <% @project.ideas.each do |idea| %>
+        <div class="box">
+          <%= link_to [@project, idea] do %>
+            <%= image_tag idea.image %>
+            <div class="view-idea">
+              <button class="btn btn-view-idea">View idea</button>
             </div>
-            <div class="modal-body">
-              <p>It will be deleted forever.</p>
-            </div>
-            <div class="modal-footer">
-              <%= link_to [@project, idea], :method => :delete, :data => {confirm: 'Are your sure?'}, class: 'btn btn-danger btn-modal' do %>
-                <i class="fa fa-trash-o"></i>
-                Delete Project
-              <% end %>
+          <% end %>
+          <div class="delete-idea" data-toggle="modal" data-target="#delete-idea-<%= idea.id.to_s %>">
+            <% if idea.user == current_user %>
+              <i class="fa fa-times"></i>
+            <% end %>
+          </div>
+
+          <div class="modal fade" id="delete-idea-<%= idea.id.to_s %>">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true"><i class="fa fa-times"></i></span><span class="sr-only">Close</span></button>
+                  <h4 class="modal-title">Are you sure you want to delete this Idea?</h4>
+                </div>
+                <div class="modal-body">
+                  <p>It will be deleted forever.</p>
+                </div>
+                <div class="modal-footer">
+                  <%= link_to [@project, @idea], :method => :delete, :data => {confirm: 'Are your sure?'}, class: 'btn btn-danger btn-modal' do %>
+                    <i class="fa fa-trash-o"></i>
+                    Delete Project
+                  <% end %>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-
-      
+      <% end %>
     </div>
-  <% end %>
-</div>
+  <% else %>
+  <br/>
+  <br/>
+  <h1 class="text-center" style="color:#999;">You have a clean slate!</h1>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+<% end %>
+
 <br/>
 </div>
