--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -22,6 +22,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
+            <li><%= link_to 'Upgrade to Pro', pricing_path, class: 'text-primary' %></li>
               <li><%= link_to 'Projects', projects_path %></li>
               <li><a href="#"><%= current_user.full_name %></a></li>
               <li><%= link_to('Log out', destroy_user_session_path, :method => :delete) %> </li>
